--- a/web/index.html
+++ b/web/index.html
@@ -29,8 +29,17 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>flutterapp</title>
+  <title>JetCV Enterprise</title>
   <link rel="manifest" href="manifest.json">
+  
+  <!-- Script per forzare la porta 8080 -->
+  <script>
+    // Forza la porta 8080 se non siamo già sulla porta corretta
+    if (window.location.port && window.location.port !== '8080') {
+      const newUrl = window.location.protocol + '//' + window.location.hostname + ':8080' + window.location.pathname + window.location.search + window.location.hash;
+      window.location.href = newUrl;
+    }
+  </script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
